[GH-2441] Fix failed example project build (#2498)